--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "choxy",
   "version": "1.0.0",
-  "description": "The reactive state management system includes IndexedDB",
+  "description": "The reactive state management system and wrapper for IndexedDB",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
