--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "choxy",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "The reactive state management system and wrapper for IndexedDB",
-  "main": "index.js",
+  "main": "./dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon server.js",
