--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "choxy",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "The reactive state management system and wrapper for IndexedDB",
   "main": "dist/main.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "url": "https://github.com/phanhuyanh/choxy"
   },
   "keywords": [
+    "choxy",
     "indexeddb",
     "browser",
     "database",
